tests/ui/c-variadic/variadic-ffi-6.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/variadic-ffi-6.rs:7:6
   |
LL | ) -> &usize {
   |      ^ expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but there is no value for it to be borrowed from
help: consider using the `'static` lifetime
   |
LL | ) -> &'static usize {
   |       +++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0106`.
